--- a/src/app/units/units.page.scss
+++ b/src/app/units/units.page.scss
@@ -1,12 +1,19 @@
 ion-content{
-   --ion-background-color: #ecf0f1;
+  --background: #A1FFCE;  /* fallback for old browsers */
+  --background: -webkit-linear-gradient(to top, #FAFFD1, #A1FFCE);  /* Chrome 10-25, Safari 5.1-6 */
+  --background: linear-gradient(to top, #FAFFD1, #A1FFCE); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
 }
 .list {
+
   width: 50%;
   height: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
+}
+ion-list{
+  background-color: #A1FFCE;
 }
 
 .item {
