--- a/src/app/arobjects/arobjects.page.scss
+++ b/src/app/arobjects/arobjects.page.scss
@@ -1,5 +1,9 @@
 ion-content{
-   --ion-background-color: #ecf0f1;
+  --background: #00C9FF;  /* fallback for old browsers */
+  --background: -webkit-linear-gradient(to bottom, #92FE9D, #00C9FF);  /* Chrome 10-25, Safari 5.1-6 */
+  --background: linear-gradient(to bottom, #92FE9D, #00C9FF); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+
 }
 iframe {
     position: absolute;
@@ -8,9 +12,10 @@ iframe {
     border: none;
 }
 .buttonimage{
-  width: 40%;
-  height: auto;
+  max-width: 140px;
+  max-height: 140px;
 }
+
 
 ion-segment-button{
   padding-top: 5px;
@@ -19,9 +24,7 @@ ion-segment-button{
   height: 45px;
   background-color: #ffce00;
 }
-ion-list{
-  padding-top: 20px;
-}
+
 ion-list-header{
   background-color: coral;
 }
