--- a/src/app/discuss/discuss.page.html
+++ b/src/app/discuss/discuss.page.html
@@ -8,35 +8,48 @@
 </ion-header>
 
 <ion-content>
- <div class="container" padding>
-    <div  class="message left">
-      <img class="user-img"  alt="" src="">
-      <div class="msg-detail">
-        <div class="msg-info">
-          <p>sender name</p>
-        </div>
-        <div class="msg-content">
-          <span class="triangle"></span>
-          <p class="line-breaker ">Message Details, non clickable</p>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class="container" padding>
-    <div  class="message left">
-      <img class="user-img"  alt="" src="">
-      <div class="msg-detail">
-        <div class="msg-info">
-          <p>sender name</p>
-        </div>
-        <div class="msg-content">
-          <span class="triangle"></span>
-          <p class="line-breaker ">Message details, non clickable</p>
-        </div>
-      </div>
-    </div>
-  </div>
+  <!--skeleton before loading-->
 
+  <ion-list *ngIf="!loaded">
+   <ion-item >
+       <ion-avatar slot="start">
+         <ion-skeleton-text animated></ion-skeleton-text>
+       </ion-avatar>
+     <ion-label>
+       <p><ion-skeleton-text animated style="width: 70%"></ion-skeleton-text></p>
+       <p><ion-skeleton-text animated style="width: 60%"></ion-skeleton-text></p>
+       <p><ion-skeleton-text animated style="width: 50%"></ion-skeleton-text></p>
+     </ion-label>
+    </ion-item>
+  </ion-list>
+
+<!--< afterloading >-->
+<div *ngIf="loaded">
+ <div class="container" padding>
+    <ion-item  class="message left">
+      <img class="user-img"  alt="" src="../../assets/coyote-logo.png">
+      <div class="msg-detail">
+        <ion-label class="msg-info">{{ loaded.sender }}</ion-label>
+        <ion-text class="msg-content">
+          <!--<span class="triangle"></span>-->
+          {{ loaded.message }}
+        </ion-text>
+      </div>
+    </ion-item>
+     <ion-item  class="message left">
+      <img class="user-img"  alt="" src="../../assets/coyote-logo.png">
+      <div class="msg-detail">
+        <ion-label class="msg-info">{{ loaded.sender }}</ion-label>
+        <ion-text class="msg-content">
+          <!--<span class="triangle"></span>-->
+          {{ loaded.message }}
+        </ion-text>
+      </div>
+    </ion-item>
+  </div>
+</div>
+
+    <!--sending button-->
   <ion-footer no-border>
     <div class="input-wrap">
       <textarea #messageInput placeholder="Enter your message!" [(ngModel)]="chatMessage" (keyup.enter)="sendMessage()">
