--- a/src/app/grade/grade.page.scss
+++ b/src/app/grade/grade.page.scss
@@ -1,3 +1,7 @@
 ion-content{
-   --ion-background-color: #ecf0f1;
+  --background: #00C9FF;  /* fallback for old browsers */
+  --background: -webkit-linear-gradient(to bottom, #92FE9D, #00C9FF);  /* Chrome 10-25, Safari 5.1-6 */
+  --background: linear-gradient(to bottom, #92FE9D, #00C9FF); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+
 }
