--- a/src/app/learn/learn.page.scss
+++ b/src/app/learn/learn.page.scss
@@ -1,4 +1,13 @@
 ion-content{
-   --ion-background-color: #ecf0f1;
+ --background: #00C9FF;  /* fallback for old browsers */
+  --background: -webkit-linear-gradient(to bottom, #92FE9D, #00C9FF);  /* Chrome 10-25, Safari 5.1-6 */
+  --background: linear-gradient(to bottom, #92FE9D, #00C9FF); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 
+
+}
+ion-item{
+   --background: #00C9FF;  /* fallback for old browsers */
+}
+ion-list {
+   --background: #00C9FF;
 }
